<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="#F7F7F7"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <include layout="@layout/base_tool_bar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/bg_shop_pay"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/shop_pay_money"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="20dp"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/color_text"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="25dp"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:textColor="@color/color_text"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:text="@string/money"
                    android:layout_marginLeft="22dp"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/et_shop_money"
                    android:layout_width="match_parent"
                    android:background="@null"
                    android:hint="@string/shop_money_tip"
                    android:textSize="@dimen/text_13sp"
                    android:inputType="numberDecimal"
                    android:textColor="@color/color_text"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_height="30dp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal"
            android:background="@drawable/bg_shop_pay"
            android:layout_height="60dp">

            <CheckBox
                android:id="@+id/cb_shop_pay"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"
                android:button="@drawable/bg_cb"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/shop_pay_not_discount"
                android:textSize="14sp"
                android:textColor="@color/color_text"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/et_shop_not_discount_money"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:background="@null"
                android:hint="@string/shop_enter_money"
                android:textSize="@dimen/text_13sp"
                android:layout_marginRight="20dp"
                android:gravity="right|center_vertical"
                android:inputType="numberDecimal"
                android:numeric="decimal"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_height="30dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/bg_shop_pay"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="60dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/shop_coupon"
                    android:textSize="14sp"
                    android:textColor="@color/color_text"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="22dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/et_shop_coupon_money"
                    android:layout_width="match_parent"
                    android:background="@null"
                    android:enabled="false"
                    android:hint="@string/shop_real_pay_hint"
                    android:textSize="@dimen/text_13sp"
                    android:layout_marginRight="20dp"
                    android:gravity="right|center_vertical"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_height="30dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="60dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/shop_real_pay"
                    android:textSize="14sp"
                    android:textColor="@color/color_text"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="22dp"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/et_shop_pay_real_money"
                    android:layout_width="match_parent"
                    android:background="@null"
                    android:enabled="false"
                    android:textColorHint="#CCCCCC"
                    android:hint="@string/shop_coupon_hint"
                    android:textSize="@dimen/text_13sp"
                    android:layout_marginRight="20dp"
                    android:gravity="right|center_vertical"
                    android:inputType="numberDecimal"
                    android:numeric="decimal"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_height="30dp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="26dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/shop_coupon_tip"
                android:textSize="@dimen/text_12sp"
                android:textColor="#999999"
                android:textStyle="bold"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/shop_coupon_tip_str"
                android:textSize="10sp"
                android:layout_marginTop="@dimen/dp_10"
                android:lineSpacingExtra="1.2dp"
                android:textColor="#CCCCCC"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_shop_pay_sure"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginTop="13dp"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:stateListAnimator="@null"
            android:text="@string/shop_pay_sure"
            android:background="@drawable/bg_register_btn_selector"
            android:layout_marginBottom="13dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>