<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/colorWhite"
    android:layout_height="match_parent">

    <include
        layout="@layout/base_tool_bar"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/iv_login_close"
        android:layout_width="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="10dp"
        android:padding="12dp"
        android:src="@drawable/ic_login_close"
        android:layout_height="40dp" />

    <ImageView
        android:layout_width="70dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_logo"
        android:layout_marginTop="25dp"
        android:layout_height="70dp" />

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/login_welcome"
        android:layout_marginTop="10dp"
        android:textColor="#999999"
        android:textSize="@dimen/text_14sp"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="38dp"
        android:layout_height="60dp">

        <EditText
            android:id="@+id/et_login_phone"
            android:layout_above="@id/line"
            android:layout_width="match_parent"
            android:hint="@string/login_phone_hint"
            android:gravity="center_vertical"
            android:textSize="15sp"
            android:textColorHint="#CCCCCC"
            android:background="@null"
            android:maxLength="11"
            android:inputType="number"
            android:imeOptions="actionNext"
            android:nextFocusForward="@id/et_login_psd"
            android:layout_height="match_parent" />

        <ImageView
            android:layout_width="30dp"
            android:id="@+id/iv_login_delete"
            android:src="@drawable/ic_delete"
            android:padding="6dp"
            android:visibility="gone"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_height="30dp" />

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:background="#E4E4E4"
            android:layout_alignParentBottom="true"
            android:layout_height="0.5dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="38dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginRight="38dp"
        android:layout_height="60dp">

        <EditText
            android:id="@+id/et_login_psd"
            android:hint="@string/login_code_hint"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:background="@null"
            android:inputType="number"
            android:textSize="15sp"
            android:maxLength="4"
            android:textColorHint="#CCCCCC"
            android:layout_above="@id/lineTwo"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/btn_login_code"
            android:layout_width="wrap_content"
            android:text="@string/login_get_code"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_centerVertical="true"
            android:textColor="#BB9445"
            android:textAllCaps="false"
            android:stateListAnimator="@null"
            android:textSize="12sp"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/bg_login_get_code"
            android:layout_height="25dp" />

        <View
            android:id="@+id/lineTwo"
            android:layout_width="match_parent"
            android:background="#E4E4E4"
            android:layout_alignParentBottom="true"
            android:layout_height="0.5dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_login_invitation"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="38dp"
        android:layout_height="60dp">

        <EditText
            android:id="@+id/et_login_invitation"
            android:layout_above="@id/lineThree"
            android:layout_width="match_parent"
            android:hint="@string/register_invitation_code_hint"
            android:gravity="center_vertical"
            android:textColorHint="#CCCCCC"
            android:background="@null"
            android:textSize="15sp"
            android:layout_height="match_parent" />

        <View
            android:id="@+id/lineThree"
            android:layout_width="match_parent"
            android:background="#E4E4E4"
            android:layout_alignParentBottom="true"
            android:layout_height="0.5dp"/>

    </RelativeLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:id="@+id/btn_login"
        android:layout_marginLeft="38dp"
        android:stateListAnimator="@null"
        android:layout_marginRight="38dp"
        android:text="@string/login_text"
        android:textSize="@dimen/text_14sp"
        android:enabled="false"
        android:background="@drawable/bg_login_btn_selector"
        android:textColor="@color/colorWhite"
        android:layout_height="40dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="@dimen/dp_15"
        android:visibility="gone"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:textColor="#CCCCCC"
            android:textSize="@dimen/text_12sp"
            android:text="@string/register_text_desc"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_login_protocol"
            android:layout_width="wrap_content"
            android:textColor="#BB9445"
            android:text="@string/register_text_desc_protocol"
            android:textSize="@dimen/text_12sp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:layout_marginRight="38dp"
        android:layout_marginLeft="38dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_login_quick"
            android:layout_width="wrap_content"
            android:text="@string/login_quick"
            android:textColor="#999999"
            android:paddingTop="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_login_forget_psd"
            android:layout_width="wrap_content"
            android:text="@string/login_phone_text"
            android:layout_alignParentRight="true"
            android:textColor="#999999"
            android:paddingTop="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_login_bottom"
        android:layout_width="match_parent"
        android:gravity="bottom"
        android:paddingBottom="49dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/register_third"
            android:layout_above="@+id/ll_register_authen"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="25dp"
            android:textColor="#CCCCCC"

            android:textSize="@dimen/text_12sp"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:id="@+id/ll_register_authen"
            android:gravity="center_horizontal"
            android:layout_alignParentBottom="true"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/login_wechat"
                android:id="@+id/tv_login_wechat"
                android:gravity="center"
                android:textSize="10sp"
                android:textColor="#999999"
                android:drawablePadding="7dp"
                android:drawableTop="@drawable/ic_register_wechat"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:text="QQ"
                android:id="@+id/tv_register_qq"
                android:gravity="center"
                android:visibility="gone"
                android:drawablePadding="6dp"
                android:layout_marginLeft="65dp"
                android:drawableTop="@drawable/ic_register_qq"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:text="微博"
                android:id="@+id/tv_register_sina"
                android:gravity="center"
                android:visibility="gone"
                android:drawablePadding="6dp"
                android:layout_marginLeft="65dp"
                android:drawableTop="@drawable/ic_register_sina"
                android:layout_height="wrap_content" />


        </LinearLayout>

    </RelativeLayout>

</LinearLayout>